--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "repl_nix_careers_website"}]
 python = "^3.12"
 flask = "^3.0.3"
 requests = "^2.32.3"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
